fixed subcategory update method
