# catalog/storage/api-docs/api-docs.json
@@ -682,10 +682,6 @@
                                     "name": {
                                         "type": "string",
                                         "example": "Игрушки"
-                                    },
-                                    "category_id": {
-                                        "type": "integer",
-                                        "example": "1"
                                     }
                                 },
                                 "type": "object"
@@ -756,10 +752,6 @@
                                     "name": {
                                         "type": "string",
                                         "example": "Игрушки"
-                                    },
-                                    "category_id": {
-                                        "type": "integer",
-                                        "example": "1"
                                     }
                                 },
                                 "type": "object"
